Issue #22. Preliminary refactoring.